# PyGistWrapper

./: Readme.md  pyproject.toml  requirements.txt  vercel.json
api/: app.py
gistblog/: main.py
gistblog/gistwrapper/: __init__.py  base.py  classes.py  create.py  delete.py  fork.py  get_gist.py  star.py
gistblog/static/css/: gist-list.css
gistblog/templates/: token-accept.html  user-page.html
gistwrapper/: __init__.py  base.py  classes.py  create.py  delete.py  fork.py  get_gist.py  star.py  users.py
src/: main.py
static/css/: token-accept.css  user-page.css
templates/: gist-list.html  user-page.html
